Bump FML/SPI and use new flag from mod file into